@@ -29,13 +29,18 @@
     </scm>
     <properties>
         <java.version>25</java.version>
-        <aws.sdk.kotlin.version>1.6.37</aws.sdk.kotlin.version>
+        <aws.java.sdk.version>1.12.797</aws.java.sdk.version>
+        <aws.sdk.kotlin.version>1.6.41</aws.sdk.kotlin.version>
+        <jackson.version>2.21.2</jackson.version>
         <kotlin.version>2.3.20</kotlin.version>
         <junit.version>6.0.3</junit.version>
         <junit4.version>4.13.2</junit4.version>
+        <jacoco.version>0.8.14</jacoco.version>
+        <mariadb.version>3.5.7</mariadb.version>
         <mockkVersion>1.14.9</mockkVersion>
         <ktlint.version>3.5.0</ktlint.version>
         <ktlint.plugin.version>3.5.0</ktlint.plugin.version>
+        <testcontainers.version>1.21.4</testcontainers.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -96,11 +101,23 @@
             <groupId>com.github.derjust</groupId>
             <artifactId>spring-data-dynamodb</artifactId>
             <version>5.1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-dynamodb</artifactId>
-            <version>1.12.761</version>
+            <version>${aws.java.sdk.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- jaxb -->
@@ -238,6 +255,7 @@
                 <configuration>
                     <args>
                         <arg>-Xjsr305=strict</arg>
+                        <arg>-Xannotation-default-target=param-property</arg>
                     </args>
                     <jvmTarget>${java.version}</jvmTarget>
                     <compilerPlugins>
@@ -289,10 +307,31 @@
                         </goals>
                         <phase>verify</phase>
                     </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} -Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading -Xshare:off --sun-misc-unsafe-memory-access=allow -Daws.java.v1.disableDeprecationAnnouncement=true</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
                     <execution>
-                        <id>ktlint-format</id>
+                        <id>prepare-agent</id>
                         <goals>
-                            <goal>format</goal>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
